# raindrop

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  rust-toolchain.toml
.github/: actionlint.yaml  dependabot.yml
.github/workflows/: ci.yml  docker.yml  release-binaries.yml
.superpowers/sdd/: ai-provider-adapters-v1-report.md  ai-provider-core-v1-report.md  category-organization-v1-report.md  content-jobs-artifacts-core-v1-report.md  feed-retention-v1-report.md  foundation-second-fix-report.md  official-ai-plugin-contract-registry-core-v1-report.md  reader-efficiency-v2-report.md  reader-ui-task-4-report.md  refresh-observability-v1-report.md  release-delivery-v1-report.md  rss-data-task-3-report.md  rss-data-task-4-brief.md  rss-data-task-4-preflight.md  rss-data-task-4-report.md  rss-data-task-8-report.md  rss-ingestion-test-strategy.md  user-preferences-v1-report.md  wasmtime-component-host-core-v1-report.md
.superpowers/sdd/reader-ui-task-4-evidence/: commands.md  report.md
contracts/artifacts/: ai-summary.v1.schema.json  ai-translation.v1.schema.json
contracts/lifecycle/feed-refresh-v1/: entry.process.json  feed.refresh.before.json  feed.refresh.completed.json  feed.refresh.fetched.json  feed.refresh.persisted.json
contracts/plugins/raindrop.ai-content/: config.v1.schema.json  manifest.template.json
contracts/wit/raindrop-content-plugin-v1/: content-plugin.wit  host-ai.wit  host-mcp.wit  types.wit  world.wit
docs/: ai-providers.md  configuration.md  rss-security.md
docs/openapi/: ai-content-v1.json  ai-provider-v1.json  organization-v1.json  preferences-v1.json  preferences-v2.json  profile-v2.json  reader-v1.json  subscription-v1.json  translation-v2.json  translation-v3.json
docs/prototypes/: mobile-reader-detail.html
docs/superpowers/plans/: 2026-07-16-foundation-bootstrap.md  2026-07-16-rss-data-ingestion.md  2026-07-17-reader-api-v1.md  2026-07-17-subscription-api-v1.md  2026-07-18-ai-provider-adapters-v1.md  2026-07-18-ai-provider-core-v1.md  2026-07-18-category-organization-v1.md  2026-07-18-feed-retention-v1.md  2026-07-18-reader-efficiency-v2.md  2026-07-18-reader-ui-v1.md  2026-07-18-refresh-observability-v1.md  2026-07-18-release-delivery-v1.md  2026-07-18-user-preferences-v1.md  2026-07-19-ai-provider-broker-composition-v1.md  2026-07-19-ai-reader-api-sidecar-v1.md  2026-07-19-content-jobs-artifacts-core-v1.md  2026-07-19-content-worker-composition-v1.md  2026-07-19-official-ai-component-invocation-contract-v1.md  2026-07-19-official-ai-component-v1.md  2026-07-19-official-ai-plugin-contract-registry-core-v1.md  (+6 more)
plugins/official/raindrop-ai-content/: Cargo.toml
plugins/official/raindrop-ai-content/src/: component.rs  config.rs  json.rs  lib.rs  lifecycle.rs  operation.rs  prompt.rs  tool_plan.rs
src/: app.rs  background.rs  lib.rs  main.rs
src/api/: backups.rs  categories.rs  entries.rs  error.rs  json.rs  media.rs  mod.rs  preferences.rs  profile.rs  rate_limit.rs  routes.rs  subscriptions.rs  translation.rs
src/api/ai/: mod.rs  (+3 more)
src/auth/: cookies.rs  extractor.rs  mod.rs  model.rs  password.rs  sessions.rs  users.rs
src/backups/: mod.rs  model.rs  repository.rs  runtime.rs  transport.rs
src/config/: loader.rs  mod.rs  model.rs  provider_key.rs  redact.rs
src/content/: mod.rs  search.rs
src/db/: connect.rs  entities.rs  migration.rs  mod.rs
src/feeds/: address_policy.rs  bulk_read.rs  content_storage.rs  deadline.rs  decode.rs  dto.rs  error.rs  fetch.rs  identity.rs  lifecycle.rs  mod.rs  model.rs  opml.rs  persistence.rs  query.rs  refresh.rs  repository.rs  resolver.rs  retention.rs  runtime.rs  schedule.rs  service.rs  state.rs  subscription.rs  test_support.rs  url_policy.rs
src/organization/: mod.rs
src/plugins/: artifact.rs  bundled.rs  config.rs  error.rs  json.rs  lifecycle.rs  manifest.rs  mod.rs  model.rs  repository.rs  tool_plan.rs
src/preferences/: fonts.rs  mod.rs  repository.rs  types.rs
src/setup/: mod.rs  service.rs
src/translation/: deeplx.rs  mod.rs  model.rs  openai.rs  repository.rs  service.rs
src/web/: assets.rs  mod.rs
tasks/: plan.md  todo.md
tests/: ai_config_api.rs  ai_content_api.rs  ai_content_openapi_contract.rs  ai_content_service.rs  ai_provider_adapters.rs  ai_provider_api.rs  ai_provider_broker.rs  ai_provider_openapi_contract.rs  ai_provider_secret.rs  ai_provider_storage.rs  ai_provider_transport.rs  backup_api.rs  backup_repository.rs  category_api.rs  category_repository.rs  config_loading.rs  content_job_backend_contracts.rs  content_job_claims.rs  content_job_enqueue.rs  content_job_migration.rs  content_job_primitives.rs  content_job_terminals.rs  content_runtime_production.rs  content_worker_processor.rs  content_worker_runtime.rs  database_migrations.rs  embedded_official_ai_bundle.rs  embedded_web.rs  feed_entry_persistence.rs  feed_executor_contracts.rs  feed_ingestion_e2e.rs  feed_lifecycle_outbox.rs  feed_parse_sanitize.rs  feed_primitives.rs  feed_query_contracts.rs  feed_refresh_claims.rs  feed_retention_contracts.rs  feed_runtime.rs  feed_state_contracts.rs  feed_subscription_contracts.rs  (+34 more)
tests/fixtures/: README.md  atom_mixed.xml  feed_manifest.json  json_feed.json  lato-v22-latin-regular.woff2.b64  malicious_html.xml  rss_1_rdf.xml  rss_2_60_items.xml  rss_identity_edges.xml  rss_windows_1252.xml  unsafe_xml.xml
tests/reader_openapi_contract/: document.rs  dto_tests.rs  fixture.rs  mod.rs  request_tests.rs  response.rs  router_failure_tests.rs  router_tests.rs  schema.rs  schema_tests.rs  surface_tests.rs
tests/support/: database.rs  mod.rs  official_ai_component.rs  plugin.rs  plugin_component.rs
web/: DESIGN.md  index.html  lingui.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
web/e2e/: admin-only-setup.spec.ts  mobile-foundation.spec.ts  production-server.spec.ts  reader-workspace.spec.ts  setup-login.spec.ts
web/public/: theme-bootstrap.js
web/scripts/: generate-reader-types.mjs  verify-release-contracts.mjs
web/src/: main.tsx  version.d.ts
(+339 files in other folders)
