[package]
name = "raindrop-ai-content"
version = "1.0.0"
edition = "2024"
rust-version = "1.94"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "=1.0.229", features = ["derive"] }
serde_json = "=1.0.150"
wit-bindgen = { version = "=0.59.0", default-features = false, features = ["macros", "realloc", "std"] }
